--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -19,10 +19,6 @@ a {
 a:visited {
   color: #666; }
 
-a:hover {
-  color: #fff;
-  background-color: #000; }
-
 th {
   padding-bottom: 5px; }
 
@@ -62,4 +58,5 @@ div.actions {
   list-style: square; }
 
 label {
-  display: block; }
+  display: block; 
+}
