--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,10 +15,13 @@
   <%= @product.price %>
 </p>
 
-<p>
-  <strong>Image:</strong>
-  <%= @product.image %>
-</p>
+<!-- Flickity HTML init -->
+<div class="carousel" data-flickity='{ "fullscreen": true }'>
+  <% @product.images.each do |image| %>
+    <div class="carousel-cell"><%= image_tag url_for(image), data: { "flickity-lazyload": image.filename } %></div>
+  <% end %>
+</div>
+
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
