--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -16,8 +16,8 @@ pre {
 a {
   color: #000; }
 
-a:visited {
-  color: #666; }
+// a:visited {
+//   color: #666; }
 
 th {
   padding-bottom: 5px; }
