--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -138,6 +138,10 @@ a.woocommerce-LoopProduct-link.woocommerce-loop-product__link {
   font-size: 16px;
 }
 
+ul {
+  list-style-type: none !important;
+}
+
 [type=checkbox],[type=radio] {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -892,7 +896,7 @@ body,.container,.full-width .ubermenu-nav,.container-width,.row {
 }
 
 .container-width,.full-width .ubermenu-nav,.container,.row {
-  max-width: 1080px
+  max-width: 1300px
 }
 
 .row.row-collapse {
@@ -904,7 +908,7 @@ body,.container,.full-width .ubermenu-nav,.container-width,.row {
 }
 
 .row.row-large {
-  max-width: 1110px
+  max-width: 1350px
 }
 
 body.framed,body.framed header,body.framed .header-wrapper,body.boxed,body.boxed header,body.boxed .header-wrapper,body.boxed .is-sticky-section {
@@ -1004,6 +1008,35 @@ body.framed,body.framed header,body.framed .header-wrapper,body.boxed,body.boxed
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1
+}
+
+.counter-shoping {
+  position: absolute;
+  font-style: normal;
+  font-family: Arial, Sans-serif !important;
+  top: 4px;
+  right: -10px;
+  font-weight: bolder;
+  background-color: #04abcc;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, .3);
+  box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, .3);
+  font-size: 11px;
+  padding-left: 2px;
+  padding-right: 2px;
+  opacity: .9;
+  line-height: 17px;
+  letter-spacing: -0.5px;
+  height: 17px;
+  min-width: 17px;
+  border-radius: 99px;
+  color: #fff;
+  text-align: center;
+  z-index: 1;
+  -webkit-transition: -webkit-transform .2s;
+  transition: -webkit-transform .2s;
+  -o-transition: transform .2s;
+  transition: transform .2s;
+  transition: transform .2s, -webkit-transform .2s;
 }
 
 @media(max-width: 849px) {
@@ -6081,11 +6114,16 @@ a.plain {
 }
 
 a:hover,a.remove:hover,a.icon-circle:hover {
-  color: #000
+  // color: #000
 }
 
 .dark a,.dark .widget a {
   color: currentColor
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.6;
 }
 
 .dark a:hover,.dark .widget a:hover {
@@ -9869,7 +9907,7 @@ ul.menu>li.has-child,.widget>ul>li.has-child {
 .logo a {
   text-decoration: none;
   display: block;
-  color: #446084;
+  color: #FFF;
   font-size: 32px;
   text-transform: uppercase;
   font-weight: bolder;
