--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-<%= link_to 'New Product', new_product_path if user_signed_in? && current_user.admin %>
 <div class="">
   <% if @products.length > 0%>
     <div id="col-559391347" class="col title-moi bctm small-12 large-12">
@@ -9,7 +7,7 @@
     </div>
   <% end %>
 
-  <div class="row large-columns-4 medium-columns-3 small-columns-2 row-small has-shadow row-box-shadow-2">
+  <div class="row large-columns-4 medium-columns-3 small-columns-2 has-shadow row-box-shadow-2">
     <% @products.each do |product| %>
       <div class="product-small col has-hover rtwpvs-product product type-product post-38552 status-publish first instock product_cat-tu-lavabo has-post-thumbnail sale shipping-taxable purchasable product-type-variable has-default-attributes">
         <div class="col-inner">
@@ -35,7 +33,7 @@
                 </span>
               </div>
               <div class="add-to-cart-button">
-                <a href="javascript:void()" data-quantity="1" class="primary is-small mb-0 button product_type_variable add_to_cart_button is-outline rtwpvs_add_to_cart rtwpvs_ajax_add_to_cart" data-product_id="<%= product.id %>" data-product_sku="" aria-label="Lựa chọn cho “Bộ tủ lavabo kết hợp tủ gương led cao cấp Enic BT Plus 80cm - 100cm”" rel="nofollow" data-variation_id="" data-variation="">Them Vao Gio Hang</a>
+                <a href="javascript:void()" onclick="Product.addCart('<%= product.id %>')" data-quantity="1" class="primary is-small mb-0 button product_type_variable add_to_cart_button is-outline rtwpvs_add_to_cart rtwpvs_ajax_add_to_cart" data-product_id="<%= product.id %>" data-product_sku="" aria-label="Lựa chọn cho “Bộ tủ lavabo kết hợp tủ gương led cao cấp Enic BT Plus 80cm - 100cm”" rel="nofollow" data-variation_id="" data-variation="">Them Vao Gio Hang</a>
               </div>
             </div>
           </div>
